feat: Updated OpenAPI spec (#37)
