# src/libs/Strava/openapi.yaml
@@ -688,7 +688,7 @@
       "get": {
         "operationId": "exploreSegments",
         "summary": "Explore segments",
-        "description": "Returns the top 10 segments matching a specified query.",
+        "description": "Returns the top 10 segments matching a specified query. Available only to Extended Access Tier apps with granted permission.",
         "parameters": [
           {
             "name": "bounds",
@@ -1953,176 +1953,6 @@
                 "owner_id": 759,
                 "following_count": 107
               }
-            }
-          },
-          "default": {
-            "description": "Unexpected error.",
-            "schema": {
-              "$ref": "#/definitions/Fault"
-            }
-          }
-        }
-      }
-    },
-    "/clubs/{id}/members": {
-      "get": {
-        "operationId": "getClubMembersById",
-        "summary": "List Club Members",
-        "description": "Returns a list of the athletes who are members of a given club.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "The identifier of the club.",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          },
-          {
-            "$ref": "#/parameters/page"
-          },
-          {
-            "$ref": "#/parameters/perPage"
-          }
-        ],
-        "tags": [
-          "Clubs"
-        ],
-        "responses": {
-          "200": {
-            "description": "A list of club athlete representations.",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/ClubAthlete"
-              }
-            },
-            "examples": {
-              "application/json": [
-                {
-                  "resource_state": 2,
-                  "firstname": "Peter",
-                  "lastname": "S.",
-                  "membership": "member",
-                  "admin": false,
-                  "owner": false
-                }
-              ]
-            }
-          },
-          "default": {
-            "description": "Unexpected error.",
-            "schema": {
-              "$ref": "#/definitions/Fault"
-            }
-          }
-        }
-      }
-    },
-    "/clubs/{id}/admins": {
-      "get": {
-        "operationId": "getClubAdminsById",
-        "summary": "List Club Administrators",
-        "description": "Returns a list of the administrators of a given club.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "The identifier of the club.",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          },
-          {
-            "$ref": "#/parameters/page"
-          },
-          {
-            "$ref": "#/parameters/perPage"
-          }
-        ],
-        "tags": [
-          "Clubs"
-        ],
-        "responses": {
-          "200": {
-            "description": "A list of summary athlete representations.",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/SummaryAthlete"
-              }
-            },
-            "examples": {
-              "application/json": [
-                {
-                  "resource_state": 2,
-                  "firstname": "Peter",
-                  "lastname": "S."
-                }
-              ]
-            }
-          },
-          "default": {
-            "description": "Unexpected error.",
-            "schema": {
-              "$ref": "#/definitions/Fault"
-            }
-          }
-        }
-      }
-    },
-    "/clubs/{id}/activities": {
-      "get": {
-        "operationId": "getClubActivitiesById",
-        "summary": "List Club Activities",
-        "description": "Retrieve recent activities from members of a specific club. The authenticated athlete must belong to the requested club in order to hit this endpoint. Pagination is supported. Athlete profile visibility is respected for all activities.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "The identifier of the club.",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          },
-          {
-            "$ref": "#/parameters/page"
-          },
-          {
-            "$ref": "#/parameters/perPage"
-          }
-        ],
-        "tags": [
-          "Clubs"
-        ],
-        "responses": {
-          "200": {
-            "description": "A list of activities.",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/ClubActivity"
-              }
-            },
-            "examples": {
-              "application/json": [
-                {
-                  "resource_state": 2,
-                  "athlete": {
-                    "resource_state": 2,
-                    "firstname": "Peter",
-                    "lastname": "S."
-                  },
-                  "name": "World Championship",
-                  "distance": 2641.7,
-                  "moving_time": 577,
-                  "elapsed_time": 635,
-                  "total_elevation_gain": 8.8,
-                  "type": "Ride",
-                  "sport_type": "MountainBikeRide",
-                  "workout_type": null
-                }
-              ]
             }
           },
           "default": {
@@ -3948,11 +3778,11 @@
         },
         "type": {
           "type": "integer",
-          "description": "This route's type (1 for ride, 2 for runs)"
+          "description": "This route's type (1 = Ride, 2 = Run, 3 = Walk, 4 = Hike, 5 = Trail Run, 6 = Gravel Ride, 7 = Mountain Bike Ride)"
         },
         "sub_type": {
           "type": "integer",
-          "description": "This route's sub-type (1 for road, 2 for mountain bike, 3 for cross, 4 for trail, 5 for mixed)"
+          "description": "This route's sub-type (1 = Road, 2 = MTB, 3 = Gravel, 4 = Trail, 5 = Mixed)"
         },
         "created_at": {
           "type": "string",
